deploy: 25a97fb6113abe843e869b764e05eaf82637b7f5

--- a/conventions/namespace.html
+++ b/conventions/namespace.html
@@ -138,7 +138,7 @@
 <h2 id="about"><a class="header" href="#about">About</a></h2>
 <p>This convention aims to prevent conflict when deciding the name for your scoreboards, functions, storages, etc. by using a &quot;namespace prefix&quot;.</p>
 <h2 id="implementation"><a class="header" href="#implementation">Implementation</a></h2>
-<p>A namespace prefix must be used whenever it is possible. This includes tags (datapack), tags (<code>/tag</code>), nbts, scoreboards, functions, advancements, loot tables, structures, world generation settings, recipes, data storage.</p>
+<p>A namespace prefix must be used whenever it is possible. This includes tags (datapack), tags (<code>/tag</code>), teams, nbts, scoreboards, functions, advancements, loot tables, structures, world generation settings, recipes, data storage.</p>
 <p>There is no rule specifying how you should design your namespace prefix, but these are some of the examples:</p>
 <hr />
 <pre><code class="language-mcfunction">scoreboard objectives add bb.var dummy
