--- a/conventions/datapack_uninstallation.html
+++ b/conventions/datapack_uninstallation.html
@@ -141,6 +141,64 @@
 <p>There are no rules enforcing how you should implement the uninstallation method, as long as you do implement it. However, the following section outlines one of the many ways to implement it.</p>
 <h3 id="uninstallation-function"><a class="header" href="#uninstallation-function">Uninstallation Function</a></h3>
 <p>You can create an &quot;uninstallation function&quot;, which when ran, will remove most of the content added from your datapack. You can tell the user about this function inside your project page or anywhere you like.</p>
+<hr />
+<h3 id="additional-installation--uninstallation-guideline-optional"><a class="header" href="#additional-installation--uninstallation-guideline-optional"><strong>Additional Installation &amp; Uninstallation Guideline (Optional)</strong></a></h3>
+<h4 id="1-scoreboards-storages-or-teams-should-be-removed"><a class="header" href="#1-scoreboards-storages-or-teams-should-be-removed"><strong>1. scoreboards, storages, or teams, should be removed.</strong></a></h4>
+<blockquote>
+<p>In a situation that you cannot remove them, you should includes the reason in the <a href="https://github.com/mc-datapacks/review-tracker/issues">request review</a> or mcfunction comment.</p>
+</blockquote>
+<h4 id="2-only-use-loadjson"><a class="header" href="#2-only-use-loadjson"><strong>2. Only use <code>load.json</code></strong></a></h4>
+<p>The <code>tick.json</code> file typically runs before <code>load.json</code>, sometimes resulting in an incomplete installation. You can avoid that by making the init file to run before the tick function.</p>
+<pre><code class="language-json">{
+    &quot;values&quot;: [
+        &quot;dp:example/setup&quot;,
+        &quot;dp:example/main&quot;
+    ]
+}
+</code></pre>
+<pre><code class="language-mcfunction">#&gt; dp:example/main
+schedule function dp:example/main 1t
+</code></pre>
+<blockquote>
+<p>This command makes this file run every single tick just like using <code>tick.json</code>. </p>
+<p>You can make mcfunction run slower tick cycles as you like. For example</p>
+<ul>
+<li>Every 8 tick <code>schedule function &lt;function&gt; 8t</code> </li>
+<li>Every 1 second <code>schedule function &lt;function&gt; 20t or 1s</code> </li>
+<li><em>t = tick</em>, <em>s = second</em>, <em>d = gameday</em>.</li>
+</ul>
+</blockquote>
+<h4 id="3-users-should-install-zip-files-only"><a class="header" href="#3-users-should-install-zip-files-only"><strong>3. Users should install zip files only.</strong></a></h4>
+<p>For a better user experience, just drag it into the datapack folder. But there are things to be careful.</p>
+<pre><code class="language-mcfunction">#&gt; dp:example/uninstall
+
+# Use for datapacking or debugging by the owner.
+datapack disable &quot;file/example&quot;
+
+# Use for uninstalling by the user.
+datapack disable &quot;file/example.zip&quot;
+</code></pre>
+<blockquote>
+<ul>
+<li>Users are strictly prohibited from renaming files. Otherwise, when uninstalling, this command will fail.</li>
+</ul>
+</blockquote>
+<h4 id="4-uninstallation-with-schedule-clear-function-command-is-not-recommended"><a class="header" href="#4-uninstallation-with-schedule-clear-function-command-is-not-recommended"><strong>4. Uninstallation with /schedule clear &lt;function&gt; command is not recommended</strong></a></h4>
+<p>Because these problems cause inconvenience and need to be more careful.</p>
+<blockquote>
+<ul>
+<li>If you have many schedule functions, you must complete all schedule clear commands.</li>
+<li>There must be no reload after all schedule clear until the datapack file is removed.</li>
+</ul>
+</blockquote>
+<h3 id="note"><a class="header" href="#note"><strong>Note</strong></a></h3>
+<p><strong>Why is it recommended to use the datapack disable command?</strong></p>
+<ul>
+<li>If you use <code>tick.json</code> even if you remove your scoreboards, storages, or teams, this file will still be working.</li>
+<li>If you use <code>load.json</code> and <code>schedule function 1t</code>, it will be issues in section 4.</li>
+<li>Automatic reload without <code>/reload</code>. This command doesn't work with some server launchers.</li>
+<li>The <code>datapack disable</code> command there is a downside to being careful about zip file names. But this command will completely disable both methods above.</li>
+</ul>
 
                     </main>
 
