--- a/conventions/datapack_advancement.html
+++ b/conventions/datapack_advancement.html
@@ -227,14 +227,14 @@ If you are working on a project with multiple people you can choose to:</p>
 <p>Keep in mind that if you are planning to release more datapacks under this name, you should use the normal syntax over this one.</p>
 </blockquote>
 <hr />
-<h3 id="note-from-convention-mod-optional"><a class="header" href="#note-from-convention-mod-optional"><strong>Note from Convention Mod (Optional)</strong></a></h3>
-<p><strong>3. Datapack Advancement</strong></p>
+<h3 id="additional-guideline"><a class="header" href="#additional-guideline"><strong>Additional Guideline</strong></a></h3>
+<p><strong>The Regular format</strong></p>
 <p>Use the regular format when you have more than one datapack under the namespace.</p>
 <blockquote>
 <p>the advancement <em>should</em> be inside <code>/data/&lt;namespace&gt;/advancements/&lt;datapack name&gt;.json</code>.</p>
 </blockquote>
 <p>Example Datapack: <a href="https://www.planetminecraft.com/member/boomber360/">Boomber360</a>.</p>
-<p><strong>Extra: Standalone Datapack</strong></p>
+<p><strong>The standalone format</strong></p>
 <p>Use the standalone format if you only want one datapack under the namespace.</p>
 <blockquote>
 <p>Ex. <code>/data/global/advancements/standalone/&lt;datapack name&gt;.json</code>.</p>
