--- a/print.html
+++ b/print.html
@@ -254,14 +254,14 @@ If you are working on a project with multiple people you can choose to:</p>
 <p>Keep in mind that if you are planning to release more datapacks under this name, you should use the normal syntax over this one.</p>
 </blockquote>
 <hr />
-<h3 id="note-from-convention-mod-optional"><a class="header" href="#note-from-convention-mod-optional"><strong>Note from Convention Mod (Optional)</strong></a></h3>
-<p><strong>3. Datapack Advancement</strong></p>
+<h3 id="additional-guideline"><a class="header" href="#additional-guideline"><strong>Additional Guideline</strong></a></h3>
+<p><strong>The Regular format</strong></p>
 <p>Use the regular format when you have more than one datapack under the namespace.</p>
 <blockquote>
 <p>the advancement <em>should</em> be inside <code>/data/&lt;namespace&gt;/advancements/&lt;datapack name&gt;.json</code>.</p>
 </blockquote>
 <p>Example Datapack: <a href="https://www.planetminecraft.com/member/boomber360/">Boomber360</a>.</p>
-<p><strong>Extra: Standalone Datapack</strong></p>
+<p><strong>The standalone format</strong></p>
 <p>Use the standalone format if you only want one datapack under the namespace.</p>
 <blockquote>
 <p>Ex. <code>/data/global/advancements/standalone/&lt;datapack name&gt;.json</code>.</p>
@@ -1136,7 +1136,7 @@ It group every installed datapacks in one place that is easily accessible for an
 <p>You <strong>must not</strong> send an automatic message when the world is reloaded. It will clutter the chat unnecessarily and create a bad experience for the users.</p>
 <p>Most of the time, the message will be an installation message, in which case you can use <a href="style_guideline/../conventions/datapack_advancement.html">Datapack Advancement</a> instead.</p>
 <hr />
-<h3 id="note-from-convention-mod-optional-1"><a class="header" href="#note-from-convention-mod-optional-1"><strong>Note from Convention Mod (Optional)</strong></a></h3>
+<h3 id="note-from-convention-mod-optional"><a class="header" href="#note-from-convention-mod-optional"><strong>Note from Convention Mod (Optional)</strong></a></h3>
 <h3 id="exception-cases"><a class="header" href="#exception-cases"><strong>Exception cases</strong></a></h3>
 <p><strong>Case 1:</strong> Custom advancement </p>
 <ul>
