--- a/conventions/datapack_advancement.html
+++ b/conventions/datapack_advancement.html
@@ -234,7 +234,7 @@ If you are working on a project with multiple people you can choose to:</p>
 <p>the advancement <em>should</em> be inside <code>/data/&lt;namespace&gt;/advancements/&lt;datapack name&gt;.json</code>.</p>
 </blockquote>
 <p>Example Datapack: <a href="https://www.planetminecraft.com/member/boomber360/">Boomber360</a>.</p>
-<p><strong>The standalone format</strong></p>
+<p><strong>The Standalone format</strong></p>
 <p>Use the standalone format if you only want one datapack under the namespace.</p>
 <blockquote>
 <p>Ex. <code>/data/global/advancements/standalone/&lt;datapack name&gt;.json</code>.</p>
