deploy: 3745bebff00c5eb02ae11240697ca34bed6ee13c

--- a/certified_datapacks/requirement.html
+++ b/certified_datapacks/requirement.html
@@ -144,9 +144,9 @@
 <li>Your review status will be paused until those datapacks are also certified.</li>
 </ul>
 </li>
-<li>If you are not the owner, <strong>don't <code>steal</code>, <code>copy</code>, or <code>claim</code></strong> that you created it.
+<li>You must be the owner or team leader of the datapack project. 
 <ul>
-<li><code>Modification</code> or <code>further develop/expand/build on</code> should first check the <strong>license</strong> or <strong>contact the owner</strong>, and remember to <strong>credit</strong>.</li>
+<li>&quot;Modification&quot; or &quot;further develop/expand/build on&quot; should check the license or contact the owner first. And don't forget to give credit.</li>
 </ul>
 </li>
 </ul>
@@ -155,19 +155,22 @@
 <li>We may rule a datapack out at our discretion, for reasons we would then specify.</li>
 <li>This requirement is not final and can be changed in the future.</li>
 </ol>
-<h3 id="note-from-convention-mod"><a class="header" href="#note-from-convention-mod">Note from Convention Mod</a></h3>
+<h3 id="additional-requirement"><a class="header" href="#additional-requirement">Additional Requirement</a></h3>
 <ul>
-<li><strong>Learn more about the convention</strong> by reading the <code>Note from Convention Mod (Optional)</code> section, this allows you to confidently inspect your datapack before requesting review and reduces the Datapack Reviewer's workload.</li>
-<li><strong>Request review:</strong> please include every website where your datapack is published. It doesn't have to be just <code>GitHub</code> or <code>Planetminecraft</code>. And if you're on the Minecraft Datapacks discord server, add your <code>Username#0000</code> as well.</li>
+<li><strong>Learn more about the convention</strong> by reading the &quot;Additional Guideline (Optional)&quot; section, this allows you to confidently inspect your datapack before requesting review and reduces the Datapack Reviewer's workload.</li>
+<li><strong>Request review:</strong> please include every website where your datapack is published. It doesn't have to be just GitHub or Planetminecraft. And if you're on the Minecraft Datapacks discord server, add your <code>Username#0000</code> as well.
+<ul>
 <li><strong>Review type:</strong> please also specify the type of review you require.
 <ul>
 <li><strong>Certified Compatibility ✅ Only</strong></li>
-<li><strong>Certified Compatibility ✅ + Style Guideline Followed 📚 (Optional)</strong></li>
+<li><strong>Certified Compatibility ✅ + Style Guideline Followed 📚 (Optional)</strong> </li>
 </ul>
 </li>
-<li><strong>Datapack unreleased:</strong> please don't DM the file; instead, use <code>GitHub private repo</code> and invite the reviewer. Don't worry about any datapack functions leaking.</li>
 <li><strong>After certified:</strong> then your datapack will have an updated version, which you can request to review as many times as you want.</li>
-<li><strong>Request review again:</strong> please add the <code>changelog</code> or the <code>location of the changed file</code>. And If you're using <code>GitHub</code>, we can easily check the <code>commit history</code>. By doing so, the reviewer can't waste time reviewing what they've already reviewed.</li>
+<li><strong>Request again:</strong> please add the <em>changelog</em> or the <em>location of the changed file</em>. And If you're using GitHub, we can easily check the commit history. By doing so, the reviewer can't waste time reviewing what they've already reviewed.</li>
+<li><strong>Datapack unreleased:</strong> please don't DM the file; instead, use <em>GitHub private repo</em> and invite the reviewer. Don't worry about any datapack functions leaking.</li>
+</ul>
+</li>
 <li>If you have any questions about convention, you can ask on GitHub or mention <code>@Convention Mod</code> and <code>@Datapack Reviewer</code> on the discord server.</li>
 </ul>
 
