deploy: 417149f128bfe2a9141ad9119c827d9f68e258c7

--- a/print.html
+++ b/print.html
@@ -1136,7 +1136,7 @@ It group every installed datapacks in one place that is easily accessible for an
 <p>You <strong>must not</strong> send an automatic message when the world is reloaded. It will clutter the chat unnecessarily and create a bad experience for the users.</p>
 <p>Most of the time, the message will be an installation message, in which case you can use <a href="style_guideline/../conventions/datapack_advancement.html">Datapack Advancement</a> instead.</p>
 <hr />
-<h3 id="note-from-convention-mod-optional"><a class="header" href="#note-from-convention-mod-optional"><strong>Note from Convention Mod (Optional)</strong></a></h3>
+<h3 id="additional-guideline-optional-1"><a class="header" href="#additional-guideline-optional-1"><strong>Additional Guideline (Optional)</strong></a></h3>
 <h3 id="exception-cases"><a class="header" href="#exception-cases"><strong>Exception cases</strong></a></h3>
 <p><strong>Case 1:</strong> Custom advancement </p>
 <ul>
